# DiagramDesigner

./: .gitignore  CLAUDE.md  DOCKER-QUICKSTART.md  QUICKSTART.md
backend/: .env.example  Dockerfile  alembic.ini  app.py  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 20250103_0001_create_users.py  20250103_0002_create_object_repo.py  20250103_0003_create_diagram_repo.py  20250103_0004_create_indexes.py
backend/src/api/: __init__.py  app.py
backend/src/api/middleware/: __init__.py  auth.py
backend/src/api/routes/: attributes.py  auth.py  diagrams.py  (+4 more)
backend/src/models/: __init__.py  diagram_repository.py  object_repository.py  relationship.py  user.py
backend/src/repositories/: __init__.py  attribute_repository.py  base_repository.py  diagram_repository.py  domain_repository.py  entity_repository.py  relationship_repository.py  superdomain_repository.py  user_repository.py
backend/src/services/: __init__.py  attribute_service.py  auth_service.py  diagram_service.py  domain_service.py  entity_service.py  relationship_service.py  superdomain_service.py
backend/src/utils/: __init__.py  database.py
backend/tests/: conftest.py
backend/tests/contract/: test_attributes_create.py  test_attributes_list.py  test_auth_login.py  test_diagrams_create.py  test_domains_create.py  test_domains_list.py  test_entities_create.py  test_entities_list.py  test_relationships_create.py  test_superdomains_create.py  test_superdomains_delete.py  test_superdomains_get.py  test_superdomains_list.py  test_superdomains_update.py
(+56 files in other folders)
